// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays correct hint at level 0 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "width": 750,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "fontFamily": "Pixel",
        "fontSize": 10,
        "lineHeight": 18,
        "padding": 10.5,
      }
    }
  >
    Pour marcher: Type ‘marcher’
  </Text>
</View>
`;

exports[`displays correct hint at level 1 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "width": 750,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "fontFamily": "Pixel",
        "fontSize": 10,
        "lineHeight": 18,
        "padding": 10.5,
      }
    }
  >
    Hint: Pour ouvrir: Type 'ouvrir'
  </Text>
</View>
`;
